[package]
name = "ships"
version = "0.1.0"
edition = "2021"

# Ships Game

[dependencies]
bevy-inspector-egui = "0.13.0"
bevy_kira_audio = { version = "0.12.0", features = ["mp3"] }

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
	#"bevy_asset", "bevy_winit", "render", "png", "x11"] }
  "animation",
  "bevy_asset",
  #"bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  #"vorbis",
  "x11",
  "filesystem_watcher",
  "dynamic",
]
