[package]
name = "ships"
version = "0.1.0"
edition = "2021"

# Ships Game

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy-inspector-egui = "0.14.0"
bevy_kira_audio = { version = "0.13.0", features = ["mp3"] }

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
	#"bevy_asset", "bevy_winit", "render", "png", "x11"] }
  "animation",
  "bevy_asset",
  #"bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  #"vorbis",
  "x11",
  "filesystem_watcher",
	# Forces bevy to be dynamically linked, which improves iterative compile times
	# doesn't work with WASM
  #"dynamic",
]
