[package]
name = "ships"
version = "0.1.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"

# opt-level
# The valid options are:
# 
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.

# plain release 20 MB
# opt-level "z" 18.1 MB
# opt-level "s" 18.1 MB
opt-level = "z" 
# lto 11.7 MB
lto = "fat"
# codegen-units 10.4 MB
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy-inspector-egui = "0.14.0"
bevy_kira_audio = { version = "0.13.0", features = ["mp3"] }

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
  "animation",
  "bevy_asset",
  #"bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  #"vorbis",
  "x11",
  "filesystem_watcher",
	# Forces bevy to be dynamically linked, which improves iterative compile times
	# doesn't work with WASM
  #"dynamic",
]
